---------------------------------------------------------------------------------------------------
Version: 1.7.3
Date: 2019-03-21
  Changes:
    - moved scanner into subgroup with other combinators unlocked by circuit network 2
---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: 2019-03-09
  Bugfixes:
    - typo prevented moving recipe into circuit combinators 2
---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 2019-03-05
  Changes:
    - changed recipe to coper wire and electronic circuits
    - moved recipe into circuit combinators 2
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2019-02-27
  Features:
    - updated to Factorio 0.17
---------------------------------------------------------------------------------------------------
Version: 1.6.10
Date: 17.2.2019
  Bugfixes:
    - nil reference in on_configuration_changed
---------------------------------------------------------------------------------------------------
Version: 1.6.9
Date: 14.2.2019
  Features:
    - read remaining fuel values in MJ
    - try reading temperature value on all supported entities, support furnaces using heat pipes
    - added green background to detected vehicle signals, making them easier to distinguish when a wagon carries a wagon
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 28.1.2019
  Bugfixes:
    - destroying sensors without firing events no longer throws an error
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 12.12.2018
  Changes:
    - performance tweaks
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 7.12.2018
  Changes: