@@ -1,11 +1,11 @@
 {
   "name": "Inventory Sensor",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "title": "Inventory Sensor",
   "author": "Optera",
   "contact": "https://forums.factorio.com/memberlist.php?mode=viewprofile&u=21729",
   "homepage": "https://forums.factorio.com/viewtopic.php?f=97&t=30454",
   "description": "Adds a combinator that reads inventories, fuel and equipment grid of locomotives, wagons, cars, furnaces, assemblers, roboports, rocket silos and reactors.",
   "factorio_version": "0.17",
-  "dependencies": ["base >= 0.17.9"]
+  "dependencies": ["base >= 0.17.31"]
 }
