@@ -1,12 +1,18 @@
 data:extend({
   {
+    type = "item-subgroup",
+    name = "circuit-network-2",
+    group = "logistics",
+    order = "g-b"
+  },
+  {
     type = "item",
     name = "item-sensor",
-    icon = "__Inventory Sensor__/graphics/icons/inventory-sensor.png",
-    icon_size = 32,    
-    subgroup = "circuit-network",
     place_result="item-sensor",
-    order = "c[combinators]-d[item-sensor]",
+    icon = "__Inventory Sensor__/graphics/icons/inventory-sensor.png",
+    icon_size = 32,
+    subgroup = "circuit-network-2",
+    order = "is-a",
     stack_size= 50,
   }
 })
